--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <h3 class="dcsd_subhead">Built/Installed</h3>
     </div>
 
-    <div class="dcsd-facts dcsd-facts-red" data-action="facts">
+    <div class="dcsd-facts dcsd-facts-red">
       <div class="dcsd-facts_square dcsd-facts_square-lg-txt">
         <p class="dcsd-facts_number">15</p>
         <p class="dcsd-facts_text">Railing Posts</p>
